fixing excess whitespace on right side of page in mobile

--- a/styles/sass/partials/page/_page-search.scss
+++ b/styles/sass/partials/page/_page-search.scss
@@ -66,6 +66,7 @@ $module-name: 'page-search';
 			padding: 10px;
 			height: 47px;
 			background: #fff;
+			box-sizing: border-box;
 		}
 
 		&--level-two{
